# quantism

./: .gitignore  README.md  pyproject.toml
cpp/: CMakeLists.txt  pyproject.toml
cpp/src/: order_book.cpp
quantsim/data/: loaders.py
quantsim/engine/: backtester.py  event_queue.py  execution.py  metrics.py  portfolio.py  strategy.py
quantsim/exchange/: cpp_order_book.py  execution.py  market_impact.py  order_book.py  tick_generator.py
quantsim/optimization/: mean_variance.py
quantsim/risk/: monte_carlo_var.py  var_backtest.py
quantsim/strategies/: mean_reversion.py  momentum.py  pairs_trading.py
scripts/: demo_cpp_benchmark.py  demo_ma_crossover.py  demo_market_impact.py  demo_optimization.py  demo_pairs_trading.py  demo_tick_replay.py  demo_var.py
tests/: test_backtester.py  test_cpp_order_book.py  test_event_queue.py  test_exchange_execution.py  test_execution.py  test_loaders.py  test_market_impact.py  test_mean_reversion.py  test_mean_variance.py  test_metrics.py  test_momentum.py  test_monte_carlo_var.py  test_order_book.py  test_pairs_trading.py  test_portfolio.py  test_strategy.py  test_tick_generator.py  test_var_backtest.py
