[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "quantsim-matching-engine"
version = "0.1.0"
description = "Optional C++-accelerated order-book backend for quantsim (see quantsim/exchange/cpp_order_book.py)."
requires-python = ">=3.11"
